# loxia-spitfire

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pipeline-map.html  test-direct.mjs  tsconfig.json
native/: CMakeLists.txt  build-wasm-direct.sh  build-wasm.sh
native/wasm/: bindings.cpp
src/: cli.ts  index.ts  spitfire.ts
src/engine/: index.ts  speculative.ts  tree-attention.ts  wasm-engine.ts  webgpu-engine.ts
src/engine/webgpu/: buffer.ts  debug.ts  device.ts  index.ts  shader.ts  tensor.ts
src/engine/webgpu/layers/: index.ts
src/engine/webgpu/model/: index.ts  loader.ts
src/engine/webgpu/ops/: index.ts
src/engine/webgpu/perf/: gpu-profiler.ts  index.ts
src/engine/webgpu/quant/: fused-ffn.ts  fused-qkv.ts  index.ts  qgemv-optimized.ts  qgemv.ts  qtensor.ts
src/model/: gguf.ts  index.ts  manager.ts  manifest.ts
src/runner/: client.ts  index.ts  manager.ts
src/scheduler/: index.ts  scheduler.ts
src/server/: index.ts  server.ts
src/tokenizer/: index.ts
src/types/: api.ts  index.ts  model.ts  runner.ts
src/utils/: index.ts
tests/: integration.test.ts  speculative.test.ts  types.test.ts
tests/webgpu/: attention.test.ts  device.test.ts  engine.test.ts  integration.test.ts  layers.test.ts  loader.test.ts  perf.test.ts  quant-optimized.test.ts  quant.test.ts  sampling.test.ts  tensor.test.ts
